[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/components/TitleBar.gd" type="Script" id=1]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://art/Buttons/ExitButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://art/Buttons/ExitButtonHover.png" type="Texture" id=5]
[ext_resource path="res://art/Buttons/ExitButtonNormal.png" type="Texture" id=6]
[ext_resource path="res://art/Windows/WindowTitleBar.png" type="Texture" id=7]



[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 99, 95 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 99, 95 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 99, 95 )

[node name="TitleBar" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -680.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 0
texture = ExtResource( 7 )
patch_margin_left = 70
patch_margin_top = 22
patch_margin_right = 70
patch_margin_bottom = 13
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -10.0
margin_right = -10.0
margin_bottom = 10.0
rect_min_size = Vector2( 20, 20 )
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
